css/style.css
body {
    margin: 0;
    padding: 0;
    font-size: 16pt;
    font-family: 'Source Sans Pro', sans-serif;
}


footer {
    display: absolute;
    background-color: #4e4c4c;
    color: white;
    text-align: center;
    height: 5vh;
    font-weight: 100;
    font-size: 11px;
    padding-top: 1em;
}

/* home page css */
#name {
    /* https://www.wallpaperflare.com/landscape-photography-of-gray-concrete-ground-closeup-photo-of-field-with-blue-sky-wallpaper-zcrxp */
    /* https://stackoverflow.com/questions/31632419/how-to-darken-a-css-background-image/31632494 */
    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('../images/salar.jpeg');
    -webkit-background-size: cover;

    /* background-color: powderblue; */
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 90vh;
    width: 100%;

}

#name > h1 {
    color: white;
    font-size: 1.5em;
    padding: 10px;
    font-weight: 600;
    letter-spacing: 3px;
    padding-top: 30px;
    border-top: solid 3px;
}

#name > h2 {
    color: white;
    font-weight: 100;
    padding-bottom: 30px;
    border-bottom: solid 3px;
}

#name > a > p {
    color: white;
    font-weight: 200;
    transform:translateY(40px);
    font-size: 0.8em;
    border: solid 1px;
    border-radius: 8px;
    padding: 10px;
    background-color: rgba(233, 113, 129, 0.7);
}

#name > a:link {
    text-decoration: none;
}



.nav_links {
    background-color: #4e4c4c;
    height: 5vh;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}


.nav_item > a {
    text-decoration: none;
    color: rgb(255, 255, 255);
    font-weight: 200;
    font-size: 0.9em;
}

/* portfolio CSS */
.grid {
    display: grid;
    grid-template-columns: auto auto;
    gap: 10px 1px;
    text-align: center;
    width: 100%;
    overflow: hidden;
    justify-items: center;
    align-items: center;

}

.grid > div {
    height: 2em;
    /* width: 50vh; */
    background-color:rgba(255, 255, 255, 0.8);
    text-align: center;
    padding: 4em;
    position: relative;
    width: 2vw;

    border-radius: 8px;
    margin-bottom: 15px;
}




.grid > div > img {
    grid-column: 1 span 1;
    height: 5em;
    position:absolute;
    margin: 0 auto;
    left: 0;
    right: 0;
    transform: translatey(-30%)

}

.project-text > p {
    color: black;
    position: absolute;
    margin: 0 auto;
    left: 0;
    right: 0;

    font-size: 1em;
    padding: 11px;
    transform: translatey(-30%)
}

#portfolio, #about, #contact {
    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('../images/salar.jpeg');
    -webkit-background-size: cover;
    background-repeat: no-repeat;
    background-size: cover;
    /* change background color for backup */
    background-color: rgb(4, 3, 102);
}

#portfolio > h1, #about > h1, #contact > h1 {
    color: white;
    padding: 10px;
}

/* contact page css */
.form {
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 75vh;
    width: 100%;
}

.form > div {
    padding: 10px;
}

.btn {
    padding: 7px 10px;
    background-color: rgba(233, 113, 129, 0.7);
    color: white;
    font-weight: 200;
    border: none;
    border-radius: 8px;
    margin-top:3px;
}

.form-control {
    padding: 11px;
    border-radius: 5px;
}

.form-control::placeholder {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 11px;
}

label {
    display:inline-block;
    padding-bottom: 10px;
    color: white;
    font-size: 0.8em;
}

.contact-logo  {
    display: flex;
    flex-direction: row;
    justify-content:space-evenly; 
    align-items: center;
    max-height: 200px;
    margin-top: 5px;

    background-color: rgb(255, 255, 255, 0.2);
}


.contact-logo > a > img {
    max-width: 3.8em;
    max-height: 160px;
    padding: 1em;
    filter:brightness(0);
    opacity: 1.0;

}

/* about page css */
#about {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: space-evenly */
    height: 100vh;
}

#about > h1 {
    margin-bottom: 20px;
}

#bio-text {
    display: block;
    color: rgb(255, 255, 255);
    background-color: rgb(255, 255, 255, 0.2);
    padding: 10px;
    margin-top: 200px;
    text-align: center;
    font-size: 0.7em;
    max-width: 75%;
    margin: 0 auto;
    margin-bottom: 40px;
    line-height: 1.5;
    font-weight: 300;

    border: 1px solid;
    border-radius: 8px;
}

.img-container {
    display: flex;
    padding-bottom: 2em;
    filter:sepia(0.5);
    /* filter:hue-rotate(120) */
    justify-content:center;
}

.img-container > img {
    max-width: 100%;
    max-height: 250px;
    border-top-left-radius: 60px;
    border-bottom-right-radius: 60px;
}

#about > div > a > p {
    color: white;
    max-width: 100px;
    font-weight: 200;

    font-size: 0.8em;
    border: solid 1px;
    border-radius: 8px;
    padding: 10px;
    background-color: rgba(233, 113, 129, 0.7);

}

#about > div > a:link {
    text-decoration: none;
}

